force-app/main/default/objects/OneCRM__Relationship_Type__c/OneCRM__Relationship_Type__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <label>Relationship Type</label>
</CustomObject>