force-app/main/default/objects/OneCRM__Relationship_Type__c/fields/OneCRM__Active__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this reciprocal lookup is active.</description>
    <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>