force-app/main/default/objects/OneCRM__Relationship_Type__c/fields/OneCRM__Close_Family__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Close_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For creating Yahrtzeit records.</inlineHelpText>
    <label>Close Family</label>
    <type>Checkbox</type>
</CustomField>