force-app/main/default/objects/OneCRM__Relationship_Type__c/fields/OneCRM__Default__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates which relationships are created by default and which are custom, created by a user.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>