force-app/main/default/objects/OneCRM__Relationship_Type__c/fields/OneCRM__Neutral__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Neutral__c</fullName>
    <description>The value used if the Contact&apos;s gender field does not match either the Male or Female Custom Labels, and the Contact&apos;s salutation does not infer gender.</description>
    <inlineHelpText>The value used if the Contact&apos;s gender field does not match either the Male or Female Custom Labels, and the Contact&apos;s salutation does not infer gender.</inlineHelpText>
    <label>Neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>