force-app/main/default/objects/OneCRM__Relationship_Type__c/fields/OneCRM__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Record_Type__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <inlineHelpText>The suffix for the record type of this relationship (Affiliation, Standard, etc).</inlineHelpText>
    <label>Relationship Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>